clusters/pibox/apps/weight-watcher/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: weight-watcher
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
