clusters/pibox/apps/weight-watcher/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weight-watcher
  namespace: weight-watcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weight-watcher
  template:
    metadata:
      labels:
        app: weight-watcher
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          valueFrom:
            secretKeyRef:
              key: databaseUrl
              name: weightwatcher-postgres-weightwatcher-db-user
        - name: AUTH_TOKEN
          valueFrom:
            secretKeyRef:
              key: authToken
              name: weight-watcher-secret
        image: docker.io/lsedlar/weight-watcher-rs:0.4.22@sha256:a5a975964be6e7f6275a8aceaaf9dffabd29ca53d699ac0c469cb6dd0966b8a6
        imagePullPolicy: IfNotPresent
        name: weight-watcher
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            memory: 128Mi
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
      terminationGracePeriodSeconds: 30
