clusters/pibox/apps/weight-watcher/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weight-watcher
  name: weight-watcher-service
  namespace: weight-watcher
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: weight-watcher
  type: ClusterIP
